fix: Fix toast position and visibility issue due to layout CSS.

--- a/src/app/components/toasts/custom-toast/custom-toast.component.scss
+++ b/src/app/components/toasts/custom-toast/custom-toast.component.scss
@@ -7,11 +7,13 @@
   padding: 1.25rem;
   margin: 1.5rem;
   position: relative;
+  background-color: #fff;
   border-radius: .5rem;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
   min-width: 300px;
   max-width: 450px;
-   animation: slideInLeft 0.4s ease-out forwards;
+  animation: slideInLeft 0.4s ease-out forwards;
+  z-index: 9999;
 
 
   &.toast-success {
