--- a/src/app/pages/admin/users/users.component.scss
+++ b/src/app/pages/admin/users/users.component.scss
@@ -1,6 +1,9 @@
 @use "../../../../scss/variables.scss" as *;
 @use "../../../../scss/mixins.scss" as *;
 
+.teste {
+  
+}
 .admin-user-container {
   padding: 2rem 6rem;
 
